--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <script src="snake.js"></script>
     <title>Snake</title>
 </head>
 <body>
@@ -13,7 +14,7 @@
             <h1>Play Snake Here</h1>
         </div>
         <div class="game">
-            <canvas>
+            <canvas width="400px" height="400px" class="game-field">
                 
             </canvas>
         </div>
